# Dohts

./: README.md  pyproject.toml
faiss_index/: index.pkl
src/dohts/: ingest_data.py  knowledge_directory_extractor.py  query_dohts.py  responses.txt  run_pipeline.py
